# src/posts/routes.ts
@@ -7,15 +7,13 @@ import {
   destroyImage,
   updateText,
   getAllPosts,
-  getPostUser,
 } from "./controller";
 
 export const post: express.IRouter = express.Router();
 
 post.post("/create", authMiddleware, createPost);
-post.post("/add_image", authMiddleware, addPostImage);
-post.get("/all", getAllPosts);
-post.get("/list", authMiddleware, getPostUser);
-post.patch("/update_text", authMiddleware, updateText);
-post.delete("/destroy_image", authMiddleware, destroyImage);
+post.post("/attach-image", authMiddleware, addPostImage);
+post.get("/list", getAllPosts);
+post.patch("/update", authMiddleware, updateText);
+post.delete("/destroy-image", authMiddleware, destroyImage);
 post.delete("/destroy", authMiddleware, destroy);
